--- a/src/app/bem-vindo/bem-vindo.component.html
+++ b/src/app/bem-vindo/bem-vindo.component.html
@@ -16,10 +16,10 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#porque">Por que IndicaJob's?</a>
+            <a class="nav-link active" aria-current="page" href="#porque">Por que Indica Job's?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#equipe">Equipe IndicaJob's</a>
+            <a class="nav-link active" aria-current="page" href="#equipe">Equipe Indica Job's</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contato">Contato</a>
@@ -46,7 +46,7 @@
 <div class="container-welcome">
   <div class="row d-flex align-items-center">
     <div class="col-md-6" id="welcome">
-      <h1 id="titulo">Seja Bem Vinde ao IndicaJob's</h1>
+      <h1 id="titulo">Seja Bem Vinde ao Indica Job's</h1>
       <p>A rede social que aproxima as Empresas dos Usuários por meio de Indicações!</p>
     </div>
     <div class="col-md-6">
@@ -58,10 +58,10 @@
 
 <!--Sobre-Nós-->
 
-<div class="container-sobreNos" id="sobre">
-  <div class="row-texto">
-    <div class="col-md-6" id="text-Sobre">
-      <p>O IndicaJob's foi criado para ser apresentado como Projeto Final de grupo da Turma-35 do Curso Bootcamp para
+<div class="container-sobreNos">
+  <div class="row d-flex align-items-center">
+    <div class="col-md-6">
+      <p id="text-Sobre">O Indica Job's foi criado para ser apresentado como Projeto Final de grupo da Turma-35 do Curso Bootcamp para
         Desenvolvedores Web Full Stack Java da ONG Generation Brasil. Com o objetivo de apresentar soluções técnológicas
         para alcançar a ODS 8 da ONU: Trabalho Decente e Crescimento Ecônomico. A idéia por trás do Projeto é criar uma
         rede social que consiga unir Empresas que possuam vagas e usuários que possam ser indicados ou que indiquem
@@ -69,7 +69,7 @@
 
     </div>
     <div class="col-md-6 d-flex justify-content-center">
-      <h1>Sobre Nós</h1>
+      <h1 id="pl-40">Sobre Nós</h1>      
 
     </div>
   </div>
@@ -77,9 +77,9 @@
 
 
 <div class="container-porque" id="porque">
-  <div class="row d-flex justify-content-center align-items-center">
+  <div class="row d-flex align-items-center">
     <div class="col-md-6">
-      <h1>Por que IndicaJobs's?</h1>
+      <h1>Por que Indica Job's?</h1>
 
     </div>
     <div class="col-md-6">
@@ -88,7 +88,7 @@
         chegaram ao atual posto de trabalho por meio de indicação. Além de ser uma das formas mais praticadas no mercado
         de trabalho, as Empresas costumam valorizar, e muito, as referências. No entanto, essa é uma via de duas mãos, é
         muito importante ter cuidado na hora de indicar alguém, pois a performance do indicado pode afetar diretamente
-        na reputação de quem indicou. É para agilizar e otimizar esse processo que o IndicaJob's foi criado!
+        na reputação de quem indicou. É para agilizar e otimizar esse processo que o Indica Job's foi criado!
 
       </p>
     </div>
@@ -98,7 +98,7 @@
 <div class="container-tituloEquipe" id="equipe">
   <div class="row ">
     <div class="col-md-12 d-flex justify-content-center tituloEquipe">
-      <h1 class="text-center">A Equipe IndicaJob's:</h1>
+      <h1 class="text-center">A Equipe Indica Job's:</h1>
     </div>
   </div>
 </div>
@@ -110,24 +110,30 @@
       <div class="col-md-4 ml-4 d-flex justify-content-center img-equipe">
         <figure>
           <img class="img-fluid rounded-circle m-5" src="../../assets/img/Bruno.jpg" alt="">
-          <figcaption class="text-center">Bruno Foschini Pajtak
-            <p>Desenvolvedor</p>
+          <figcaption class="text-center">Bruno Foschini Pajtak 
+            <p class="subtitle">Desenvolvedor</p>
+            <a href="https://www.linkedin.com/in/bruno-pajtak/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Pajtak" target="_blank"><i class="fab fa-github-square ml-2"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-md-4 d-flex justify-content-center">
         <figure>
           <img class="img-fluid rounded-circle m-5" src="../../assets/img/Dri.jpeg" alt="">
-          <figcaption class="text-center">Drislaine Faro
-            <p>Desenvolvedora</p>
+          <figcaption class="text-center">Drislaine Faro 
+            <p class="subtitle">Desenvolvedora</p>
+            <a href="https://www.linkedin.com/in/drislainefaro/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/drifaro" target="_blank"><i class="fab fa-github-square ml-2"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-md-4 d-flex justify-content-center img-equipe">
         <figure>
           <img class="img-fluid rounded-circle m-5" src="../../assets/img/Carol.jpg" alt="" height="">
-          <figcaption class="text-center">Kathleen Caroline
-            <p>Desenvolvedora</p>
+          <figcaption class="text-center">Kathleen Caroline 
+            <p class="subtitle">Desenvolvedora</p>
+            <a href="https://www.linkedin.com/in/almostcarol/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/almostcarol" target="_blank"><i class="fab fa-github-square ml-2"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -141,14 +147,18 @@
     <div class="col-md-12 d-flex justify-content-center equipe">
       <figure>
         <img class="img-fluid rounded-circle m-5" src="../../assets/img/Robson.jpeg" alt="">
-        <figcaption class="text-center">Robson Coura
-          <p>Desenvolvedor</p>
+        <figcaption class="text-center">Robson Coura 
+          <p class="subtitle">Desenvolvedor</p>
+          <a href="https://www.linkedin.com/in/robsoncoura/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/RobsonCoura" target="_blank"><i class="fab fa-github-square ml-2"></i></a>
         </figcaption>
       </figure>
       <figure>
         <img class="img-fluid rounded-circle m-5" src="../../assets/img/Thais.jpg" alt="">
-        <figcaption class="text-center">Thaís Pereira
-          <p>Desenvolvedora</p>
+        <figcaption class="text-center">Thaís Pereira 
+          <p class="subtitle">Desenvolvedora</p>
+          <a href="https://www.linkedin.com/in/pereira-thais/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/thaisspereira" target="_blank"><i class="fab fa-github-square ml-2"></i></a>
         </figcaption>
       </figure>
     </div>
@@ -162,23 +172,23 @@
   <div id="linha-horizontal">
     <div class="container contact-box pt-2 d-flex justify-content-center">
 
-      <div class="col-md-4">
+      <div class="col-md-4 rodape">
         <i class="fab fa-github-alt mr-2 mb-3"></i>
-        <a href="https://github.com/IndicaJobs" target="_blank">Indica Job's</a>
+        <a class="rodape" href="https://github.com/IndicaJobs" target="_blank">Indica Job's</a>
       </div>
 
 
 
-      <div class="col-md-4">
+      <div class="col-md-4 rodape">
         <i class="fas fa-at mr-2 mb-3"></i>
-        <a href="mailto:indicajobs35@gmail.com" target="_blank">E-mail</a>
+        <a class="rodape" href="mailto:indicajobs35@gmail.com" target="_blank">E-mail</a>
       </div>
 
 
 
-      <div class="col-md-4">
+      <div class="col-md-4 rodape">
         <i class="fas fa-map-marked-alt mr-2 mb-3"></i>
-        <a href="">São Paulo-SP</a>
+        <a class="rodape" href="">São Paulo-SP</a>
       </div>
     </div>
   </div>
@@ -190,7 +200,7 @@
   <div class="text pt-1" style="background-color: rgba(0, 0, 0, 0.2);">
     <a class="text">Sobre nós: Indica Job's</a>
   </div>
-  <div class="text p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text p-3 " style="background-color: rgba(0, 0, 0, 0.2);">
     © 2021 Copyright:
     <a class="text" href="brazil.generation.org">Generation Brasil</a>
   </div>
