--- a/src/app/login-cadastrar/login-cadastrar.component.html
+++ b/src/app/login-cadastrar/login-cadastrar.component.html
@@ -1,12 +1,17 @@
 <div class="main">
 
+<div class= "logo-login mt-3 pl-5">
+  <a routerLink="/bem-vindo"><img src="../../assets/img/logo-nav-bar.png" alt="logo" width="250"></a>
+</div>
+
+
 
     <div class="section">
-      <div class="container">
-        <div class="row full-height justify-content-center">
-          <div class="col-12 text-center align-self-center py-5">
-            <div class="section pb-5 pt-5 pt-sm-2 text-center">
-              <h6 class="mb-0 pb-3"><span>Entrar </span><span>Cadastrar</span></h6>
+      <div class="container full-height">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center align-self-center">
+            <div class="section pt-sm-2 text-center">
+              <h6 class="txt-r mb-0 pb-3"><span>Entrar </span><span>Cadastrar</span></h6>
               <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
               <label for="reg-log"></label>
               <div class="card-3d-wrap mx-auto">
@@ -14,7 +19,7 @@
                   <div class="card-front">
                     <div class="center-wrap">
                       <div class="section text-center">
-                        <h4 class="mb-4 pb-3">Entrar</h4>
+                        <h4 class="txt-v mb-4 pb-3">ENTRAR</h4>
                         <div class="form-group">
                           <input [(ngModel)]="usuarioLogin.email" type="email" name="logemail" class="form-style" placeholder="E-Mail" id="logemail"
                             autocomplete="off">
@@ -34,7 +39,7 @@
                   <div class="card-back">
                     <div class="center-wrap">
                       <div class="section text-center">
-                        <h4 class="mb-2 pb-1">Cadastrar</h4>
+                        <h4 class=" txt-v mb-2 pb-1">CADASTRAR</h4>
                         <div class="form-group">
                           <input [(ngModel)]="usuario.nome" type="text" name="logname" class="form-style"
                             placeholder="Nome Completo" id="logname" autocomplete="off">
