--- a/src/app/login-cadastrar/login-cadastrar.component.css
+++ b/src/app/login-cadastrar/login-cadastrar.component.css
@@ -1,5 +1,3 @@
-
-
 /* Please ❤ this if you like it! */
 
 
@@ -8,13 +6,8 @@
 
 .main{
 	font-family: 'Poppins', sans-serif;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 1.7;
-	color: #c4c3ca;
-	background-image: url(../../assets/img/Fundo-Login.jpg);
-  background-size: cover;
-	overflow-x: hidden; 
+	background-image: url(../../assets/img/Background.jpg);
+  background-size: cover; 
 }
 a {
 	cursor: pointer;
@@ -66,7 +59,7 @@ h6 span{
   padding: 0;
   margin: 10px auto;
   cursor: pointer;
-  background-color: #6BACAD;
+  background-color: #1289A7;
 }
 .checkbox:checked + label:before,
 .checkbox:not(:checked) + label:before{
@@ -75,8 +68,8 @@ h6 span{
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  color: #6BACAD;
-  background-color: #062b35;
+  color: #1289A7;
+  background-color: #6F1E51;
   font-family: 'unicons';
   content: '⬉';
   z-index: 20;
@@ -115,7 +108,7 @@ h6 span{
 .card-front, .card-back {
   width: 100%;
   height: 100%;
-  background-color: #062b35;
+  background-color: #6f1e51fd;
   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
   background-position: bottom center;
   background-repeat: no-repeat;
@@ -166,8 +159,8 @@ h6 span{
   line-height: 22px;
   letter-spacing: 0.5px;
   outline: none;
-  color: #c4c3ca;
-  background-color: #1f2029;
+  color: #1289A7;
+  background-color: #FFFFFF;
   border: none;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -193,28 +186,26 @@ h6 span{
 }
 
 .form-group input:-ms-input-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
+  color: #1289A7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input::-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
+  color: #1289A7;
+
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input:-moz-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
+  color: #1289A7;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 .form-group input::-webkit-input-placeholder  {
-  color: #c4c3ca;
-  opacity: 0.7;
+  color: #1289A7;
   -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
+
 }
 .form-group input:focus:-ms-input-placeholder  {
   opacity: 0;
@@ -235,6 +226,13 @@ h6 span{
   opacity: 0;
   -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
+}
+
+
+select option {
+  margin: 40px;
+  color: #1289A7;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
 }
 
 .btn{
@@ -268,16 +266,14 @@ h6 span{
 .btn:active,
 .btn:focus{
   background-color: #102770;
-  color: #6BACAD;
+  color: #1289A7;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
 .btn:hover{
-  background-color: #062b35;
-  color: #6BACAD;
+  background-color: #c4c3ca;
+  color: #6F1E51;
   box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
-
-
 
 
 .logo {
@@ -288,8 +284,17 @@ h6 span{
 	z-index: 100;
 	transition: all 250ms linear;
 }
-.logo img {
-	height: 26px;
-	width: auto;
-	display: block;
+
+.logo-login{
+  display: flex;
+  justify-content: left;
+}
+
+.txt-v{
+  color: #1289A7;
+}
+
+.txt-r{
+  color: #6F1E51;
+  font-size: 15px;
 }
