--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -35,3 +35,46 @@
         </div>
     </div>
 </div>
+
+      <!--Footer-->
+      <footer id="contato" class="bg text-center text-lg-start">
+
+        <div id="linha-horizontal">
+          <div class="container contact-box pt-2 d-flex justify-content-center">
+  
+            <div class="col-md-4 rodape">
+              
+              <a class="rodape" href="https://github.com/IndicaJobs" target="_blank"><i class="fab fa-github-alt mr-2 mb-3"></i>Indica Job's</a>
+            </div>
+  
+  
+  
+            <div class="col-md-4 rodape">
+              
+              <a class="rodape" href="mailto:indicajobs35@gmail.com" target="_blank"><i class="fas fa-at mr-2 mb-3"></i>E-mail</a>
+            </div>
+  
+  
+  
+            <div class="col-md-4 rodape">
+              
+              <a class="rodape" href=""><i class="fas fa-map-marked-alt mr-2 mb-3"></i>São Paulo-SP</a>
+            </div>
+          </div>
+        </div>
+  
+  
+  
+  
+        <!-- Copyright -->
+        <div class="bg-footer">
+        <div class="text pt-1" style="background-color: rgba(0, 0, 0, 0.2);">
+          <a class="text">Sobre nós: Indica Job's</a>
+        </div>
+        <div class="text p-3 " style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2021 Copyright:
+          <a class="text" href="brazil.generation.org">Generation Brasil</a>
+        </div>
+      </div>
+        <!-- Copyright -->
+      </footer>
